--- a/task-2/index.html
+++ b/task-2/index.html
@@ -235,12 +235,62 @@
 						</div>
 						<!-- Hide -->
 						<div class='card-text f-avel text-center' id='action'>
-							<i class='fab fa-opencart'></i>
-							<i class='fas fa-eye'></i>
-							<i class='fas fa-link'></i>
-							<i class='fas fa-chart-pie'></i>
+							<i id="ico-cart" class='fab fa-opencart border p-1' style="background-color: #EAECEE;"></i>
+							<i id="ico-view" class='fas fa-eye border p-1' style="background-color: #EAECEE;"></i>
+							<i id="ico-heart" class='far fa-heart border p-1' style="background-color: #EAECEE;"></i>
+							<i id="ico-compare" class='fas fa-chart-pie border p-1' style="background-color: #EAECEE;"></i>
 						</div>
 						<!-- -->
+
+						<!-- Modal -->
+						<div class="modal fade rounded-0" id="viewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+						  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header border-0">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						          <span aria-hidden="true">&times;</span>
+						        </button>
+						      </div>
+						      <div class="modal-body">
+						        <div class="row">
+						        	<div class="col-md-4">
+						        		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+										  <div class="carousel-inner">
+										    <div class="carousel-item active">
+										      <img src="../task-2/img/1-8-1-300x300.jpg" class="d-block w-100" alt="...">
+										    </div>
+										    <div class="carousel-item">
+										      <img src="../task-2/img/12-7-1-300x300.jpg" class="d-block w-100" alt="...">
+										    </div>
+										    <div class="carousel-item">
+										      <img src="../task-2/img/15-7-1-300x300.jpg" class="d-block w-100" alt="...">
+										    </div>
+										  </div>
+										  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+										    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										    <span class="sr-only">Previous</span>
+										  </a>
+										  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+										    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+										    <span class="sr-only">Next</span>
+										  </a>
+										</div>
+						        	</div>
+						        	<div class="col-md-8">
+						        		<h2>Donec Quam Felis</h2>
+						        		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						        		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						        		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						        		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						        		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						        		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						        	</div>
+						        </div>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+						<!-- End modal -->
 					</div>
 				</div>
 			</div>
@@ -289,7 +339,12 @@
 				<div class="card" id="item-5">
 					<img class="card-img-top" src="img/24-4-1-300x300.jpg" alt="Card Image cap">
 					<div class="card-body">
-							
+						<div class="card-title f-avel text-center">
+							Facilit Conobia
+						</div>
+						<div class="card-text f-avel text-center">
+							<b>$35.00</b>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -297,7 +352,12 @@
 				<div class="card" id="item-6">
 					<img class="card-img-top" src="img/26-3-1-300x300.jpg" alt="Card Image cap">
 					<div class="card-body">
-						
+						<div class="card-title f-avel text-center">
+							Facilit Conobia
+						</div>
+						<div class="card-text f-avel text-center">
+							<b>$35.00</b>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -305,7 +365,12 @@
 				<div class="card" id="item-7">
 					<img class="card-img-top" src="img/28-3-1-300x300.jpg" alt="Card Image cap">
 					<div class="card-body">
-
+						<div class="card-title f-avel text-center">
+							Facilit Conobia
+						</div>
+						<div class="card-text f-avel text-center">
+							<b>$35.00</b>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -313,7 +378,12 @@
 				<div class="card" id="item-8">
 					<img class="card-img-top" src="img/30-3-1-300x300.jpg" alt="Card image cap">
 					<div class="card-body">
-
+						<div class="card-title f-avel text-center">
+							Facilit Conobia
+						</div>
+						<div class="card-text f-avel text-center">
+							<b>$35.00</b>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -386,6 +456,7 @@
                   	</div>
 				</div>
 			</div>
+
 			<div class="col-md">
 				<div class="card rounded-0">
                   	<img class="card-img-top" src="img/sub-banner-6-1.jpg" alt="Card image" >
@@ -620,11 +691,13 @@
 
 	<!-- Footer -->
 	<div class="container-fluid bg-dark">	
-	<div class="container bg-dark">
+		<div class="container bg-dark">
 		<div class="row">
 			<div class="col-md mt-5">
 				<img src="img/footer-logo-1-1.png">
-				<p class="f-avel text-light mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<p class="f-avel text-light mt-2">
+					There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+				</p>
 			</div>
 			<div class="col-md mt-5">
 				<nav id="nav-f" class="nav flex-column mt-n1">
@@ -668,20 +741,19 @@
 				</nav>
 			</div>
 		</div>
-	</div>
+		</div>
 	</div>
 	<!-- End footer -->
 
 	<!-- Bottom footer -->
 	<div class="bg-brown p-3 text-white">
-		<h6 class="f-avel mt-1 ml-6">Copyright © 2018 demo All Rights Reserved</h6>
+		<h6 class="f-avel mt-1 ml-6">Copyright © 2019 demo All Rights Reserved</h6>
 	</div>
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
@@ -717,7 +789,7 @@
 
   			// Icons hover 
   			$("#ico-1").hover(function(){
-  				$("#ico-1-1").css("color","black").shake(3,7,800);
+  				$("#ico-1-1").css("color","black").shake(3, 7, 800);
   			},
   				function() {
   					$("#ico-1-1").css("color","grey");
@@ -772,6 +844,53 @@
 				return this;
 			};
 			
+			// Icons cart
+			// icon 1
+			$("#ico-cart").hover(function(){
+				$("#ico-cart").css("background-color", "#1985F1");
+				$("#ico-cart").css("color", "white");
+			},
+				function(){
+					$("#ico-cart").css("background-color", "#EAECEE");
+					$("#ico-cart").css("color", "black");
+				}
+			);
+			// icon 2
+			$("#ico-view").hover(function(){
+				$("#ico-view").css("background-color", "#1985F1");
+				$("#ico-view").css("color", "white");
+			},
+				function(){
+					$("#ico-view").css("background-color", "#EAECEE");
+					$("#ico-view").css("color", "black");
+				}
+			);
+			// icon 3
+			$("#ico-heart").hover(function(){
+				$("#ico-heart").css("background-color", "#1985F1");
+				$("#ico-heart").css("color", "white");
+			},
+				function(){
+					$("#ico-heart").css("background-color", "#EAECEE");
+					$("#ico-heart").css("color", "black");
+				}
+			);
+			// icon 4
+			$("#ico-compare").hover(function(){
+				$("#ico-compare").css("background-color", "#1985F1");
+				$("#ico-compare").css("color", "white");
+			},
+				function(){
+					$("#ico-compare").css("background-color", "#EAECEE");
+					$("#ico-compare").css("color", "black");
+				}
+			);
+
+			// Modal toggle
+			$("#ico-view").click(function() {
+				$('#viewModal').modal('show');//show the modal
+			});
+
 		});
     </script>
 
